5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3998/executions/1590_2894.log
== TEST (2019-03-20 15:10:59) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
print = float(input(()"abs(8))+45"))

# Calculo do valor a ser pago, incluindo o frete:
total = ?????

# Impressao do valor total:
print(total dos jogos)
-- ERROR:
File "XXXX", line 5
    print = float(input(()"abs(8))+45"))
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:27:13) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor = float(input("Qual o valor unitario do jogo")

# Calculo do valor a ser pago, incluindo o frete:
total = (valor * 8) + 45

# Impressao do valor total:
print(total)
-- ERROR:
File "XXXX", line 8
    total = (valor * 8) + 45
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:27:49) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor = float(input("Qual o valor unitario do jogo")

# Calculo do valor a ser pago, incluindo o frete:
total = (valor * 8) + 45

# Impressao do valor total:
print("total")
-- ERROR:
File "XXXX", line 8
    total = (valor * 8) + 45
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:28:29) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor = float(input("Qual o valor unitario do jogo")

# Calculo do valor a ser pago, incluindo o frete:
total = (valor * 8) + 45

# Impressao do valor total:
print(total)
-- ERROR:
File "XXXX", line 8
    total = (valor * 8) + 45
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:28:29) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor = float(input("Qual o valor unitario do jogo")

# Calculo do valor a ser pago, incluindo o frete:
total = (valor * 8) + 45

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.136331
-- ERROR:
  File "/home/codebench/codes/1590/2894/main.py", line 8
    total = (valor * 8) + 45
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:28:32) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor = float(input("Qual o valor unitario do jogo")

# Calculo do valor a ser pago, incluindo o frete:
total = (valor * 8) + 45

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.106969
-- ERROR:
  File "/home/codebench/codes/1590/2894/main.py", line 8
    total = (valor * 8) + 45
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:28:46) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor = float(input("Qual o valor unitario do jogo?")

# Calculo do valor a ser pago, incluindo o frete:
total = (valor * 8) + 45

# Impressao do valor total:
print(total)
-- ERROR:
File "XXXX", line 8
    total = (valor * 8) + 45
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:28:47) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor = float(input("Qual o valor unitario do jogo?")

# Calculo do valor a ser pago, incluindo o frete:
total = (valor * 8) + 45

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.279015
-- ERROR:
  File "/home/codebench/codes/1590/2894/main.py", line 8
    total = (valor * 8) + 45
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:28:48) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor = float(input("Qual o valor unitario do jogo?")

# Calculo do valor a ser pago, incluindo o frete:
total = (valor * 8) + 45

# Impressao do valor total:
print(total)
-- ERROR:
File "XXXX", line 8
    total = (valor * 8) + 45
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:29:00) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor = float(input("Qual valor unitario do jogo?")

# Calculo do valor a ser pago, incluindo o frete:
total = (valor * 8) + 45

# Impressao do valor total:
print(total)
-- ERROR:
File "XXXX", line 8
    total = (valor * 8) + 45
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:29:02) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor = float(input("Qual valor unitario do jogo?")

# Calculo do valor a ser pago, incluindo o frete:
total = (valor * 8) + 45

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.140504
-- ERROR:
  File "/home/codebench/codes/1590/2894/main.py", line 8
    total = (valor * 8) + 45
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:29:12) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor = float(input("Qual valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = (valor * 8) + 45

# Impressao do valor total:
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:29:20) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor = float(input("Qual valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = (valor * 8) + 45

# Impressao do valor total:
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:29:22) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
valor = float(input("Qual valor unitario do jogo?"))

# Calculo do valor a ser pago, incluindo o frete:
total = (valor * 8) + 45

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.207134
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
